[package]
name = "sci_fi_gm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
actix-cors = "0.7"
env_logger = "0.10"
log = "0.4"