[package]
name = "sci_fi_gm_webui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
log = "0.4"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4"